@@ -2,6 +2,7 @@
 // See the file COPYING for more information
 
 #include <sqlrelay/sqlrserver.h>
+#include <rudiments/stringbuffer.h>
 #include <rudiments/charstring.h>
 
 class SQLRSERVER_DLLSPEC sqlrauth_proxied : public sqlrauth {
@@ -10,6 +11,9 @@ class SQLRSERVER_DLLSPEC sqlrauth_proxied : public sqlrauth {
 					sqlrpwdencs *sqlrpe);
 		bool	auth(sqlrserverconnection *sqlrcon,
 					const char *user, const char *password);
+	private:
+		stringbuffer	lastuser;
+		stringbuffer	lastpassword;
 };
 
 sqlrauth_proxied::sqlrauth_proxied(xmldomnode *parameters,
@@ -20,25 +24,25 @@ sqlrauth_proxied::sqlrauth_proxied(xmldomnode *parameters,
 bool sqlrauth_proxied::auth(sqlrserverconnection *sqlrcon,
 				const char *user, const char *password) {
 
-	sqlrservercontroller	*cont=sqlrcon->cont;
-
 	// if the user we want to change to is different from the user
-	// that's currently beign proxied, try to change to that user
+	// that's currently logged in, then try to change to that user
 	bool	success=true;
-	const char	*lastuser=cont->getLastUser();
-	const char	*lastpassword=cont->getLastPassword();
-	if ((charstring::isNullOrEmpty(lastuser) &&
-		charstring::isNullOrEmpty(lastpassword)) || 
-		charstring::compare(lastuser,user) ||
-		charstring::compare(lastpassword,password)) {
+	if ((lastuser.getStringLength()==0 &&
+		lastpassword.getStringLength()==0) ||
+		charstring::compare(lastuser.getString(),user) ||
+		charstring::compare(lastpassword.getString(),password)) {
 
 		// change user
 		success=sqlrcon->changeProxiedUser(user,password);
 
 		// keep a record of which user we're changing to
 		// and whether that user was successful in auth
-		cont->setLastUser((success)?user:NULL);
-		cont->setLastPassword((success)?password:NULL);
+		lastuser.clear();
+		lastpassword.clear();
+		if (success) {
+			lastuser.append(user);
+			lastpassword.append(password);
+		}
 	}
 	return success;
 }
